<resources>
    <string name="app_name">TIS100Clone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings for MainActivity -->
    <string name="playButton">Play</string>

    <!-- Strings for LevelSelectActivity -->
    <string name="levelTableHeader">Choose Level</string>
    <string name="title_activity_level_select">LevelSelectActivity</string>
    <string name="level_title_example">Level Title</string>
    <string name="level_description_example">Level Description</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- node view -->
    <string name="acc_label">ACC</string>
    <string name="bak_label">BAK</string>
    <string name="last_label">LAST</string>
    <string name="mode_label">MODE</string>
    <string name="idle_label">IDLE</string>
    <string name="commands_hint">NO COMMANDS</string>
    <string name="empty_port">999</string>

    <!-- port view -->
    <string name="port_arrow_description">Port Arrow</string>
    <string name="port_path">M 4 10 V 14 H 14 V 17 L 20 12 L 14 7 V 10 z</string>

    <!-- button view -->
    <string name="play_description">Play</string>
    <string name="step_description">Step Forward</string>
    <string name="stop_description">Stop</string>
    <string name="restart_description">Restart</string>

    <!-- IO Columns -->
    <string name="io_column_header_template">TMP</string>
    <string name="input_column_name">INP</string>
    <string name="expected_column_name">EXP</string>
    <string name="output_column_name">OUT</string>
    <string name="title_activity_game_grid">GameGrid</string>
    <string name="stack_node_text">Stack Node</string>


    <!-- keyboard buttons -->
    <string name="nop">NOP</string>
    <string name="neg">NEG</string>
    <string name="sav">SAV</string>
    <string name="swp">SWP</string>
    <string name="add">ADD</string>
    <string name="sub">SUB</string>
    <string name="mov">MOV</string>
    <string name="nil">NIL</string>
    <string name="left">LEFT</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="right">RIGHT</string>
    <string name="any">ANY</string>
    <string name="last">LAST</string>
    <string name="jmp">JMP</string>
    <string name="jez">JEZ</string>
    <string name="jnz">JNZ</string>
    <string name="jgz">JGZ</string>
    <string name="jlz">JLZ</string>
    <string name="jro">JRO</string>

</resources>
