<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text"
    android:gravity="fill"
    android:orientation="horizontal"
    android:padding="@dimen/border_width">

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background"
        android:contentDescription="@string/stop_description"
        app:srcCompat="@drawable/stop_icon" />

    <Space
        android:layout_width="@dimen/border_width"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/stepButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background"
        android:contentDescription="@string/step_description"
        app:srcCompat="@drawable/step_icon" />

    <Space
        android:layout_width="@dimen/border_width"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background"
        android:contentDescription="@string/play_description"
        app:srcCompat="@android:drawable/ic_media_play" />

</LinearLayout>